# Bluppi-backend

./: .dockerIgnore  .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.gateway  LICENSE  LOADTEST.md  Makefile  README.md  bluppi  database.py  docker-compose.yml  go.mod  go.sum  main.py  nginx.conf  protobuf.sh  protoc.sh  pyproject.toml  requirements.txt  san.cnf  server_metrics.json  setup.py  start.sh  synqit_db.py
.well-known/: assetlinks.json
Docker/: go.Dockerfile  python.Dockerfile
SynqIt/: firestore.py  spotify.py
app/: logic.py  models.py  recommendation.py  server.py  services.py  yt_services.py
app/.well-known/: assetlinks.json
app/database/: db_tracks.py  db_users.py
app/endpoints/: core.py
app/utils/: bluppi_db.py  recommendation.py  weather_mood.py  ytmusicService.py
audio/: .dockerignore  Dockerfile  charts.json  requirements.txt  server.py  song.json  test.json  test.py
audio/app/: schema.py
chat/: cassandra.py  psql_client.py  schema.sql  server.py
cloudflared/: config.yml
cmd/: main.go  routes.go
cmd/api/: main.go
database/: bluppi_music.sql  chat_app.sql  config.py  config.sql  db_tracks.py  db_users.py  users.py  users.sql
endpoints/: __init__.py  core.py  middleware.py
migrations/: bulk-insert.sql  etl.sql  main.py  progress.py  requirements.txt  revert-back.sql
party/: Makefile  database.sql  listeningParty.proto  redisManager.py  roomManager.py  roomStreamService.py  server.py
searchMusic/: server.py  ytmusic_pb2.py  ytmusic_pb2_grpc.py
services/: uuid_helper.py
(+157 files in other folders)
